--- a/package.json
+++ b/package.json
@@ -2,17 +2,25 @@
   "name": "pizzeria-portal",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/panel/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "json-server": "^0.16.3",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "7.0.1",
+    "react-router-dom": "5.0.0",
     "react-scripts": "4.0.3",
+    "redux": "4.0.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all -p start:* ",
+    "start:react": "react-scripts start",
+    "start:api": "npm run build && node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -34,5 +42,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "husky": "^5.1.3",
+    "lint-staged": "^10.5.4",
+    "npm-run-all": "^4.1.5",
+    "redux-devtools-extension": "2.13.8"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.js": "eslint"
   }
 }
