--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "json-server": "^0.16.3",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
@@ -16,6 +17,7 @@
     "react-router-dom": "5.0.0",
     "react-scripts": "4.0.3",
     "redux": "4.0.1",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
